syntax = "proto3";

option java_multiple_files = true;
option java_package = "grpcjavafx";
option java_outer_classname = "EquipeProto";

service EquipeService {
    rpc getEquipeInfo (EquipeRequest) returns (EquipeResponse);
}

message EquipeRequest {
    int32 id = 1;
}

message EquipeResponse {
    repeated string equipe = 1;
}
